# WhiteoutFlakes

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  format.bat
.github/workflows/: linux-appimage.yml  macos-dmg.yml
include/whiteout/flakes/: actor_view.h  content_provider.h  display.h  enums.h  event_data.h  frame_state.h  gfx_types.h  model_data.h  model_source.h  model_types.h  renderer.h  shadow_params.h  sound_emitter.h  types.h  views.h
packaging/linux/: WhiteoutFlakes.desktop
packaging/macos/: HOW_TO_OPEN.txt  Info.plist.in  rewrite_icd.py
prebuilt/shaders/ps/: crystal.bls  distortion.bls  foliage.bls  hd.bls  (+10 more)
resources/: embed_binary.cmake  teamglow.tga
src/: common_types.h
src/gfx/: gfx.h  gfx_factory.cpp  gfx_pipeline_types.h  gfx_types.h
src/io/: content_provider.cpp  content_provider.h  event_data.cpp  event_data.h  fetch_content_provider.cpp  fetch_content_provider.h  file_content_provider.cpp  file_content_provider.h  file_resolver.cpp  file_resolver.h  mdx_animation.cpp  mdx_animation.h  mdx_model_adapter.cpp  mdx_model_adapter.h  path_utf8.cpp  path_utf8.h  replaceable_paths.cpp  replaceable_paths.h  slk.cpp  slk.h  team_glow_data.cpp  team_glow_data.h  texture_image_usage.cpp  texture_image_usage.h
src/public_api/: renderer_api.cpp
src/renderer/: actor_manager.h  animation.h  animation_driver.cpp  animation_driver.h  camera.h  constants.h  coordinate_system.cpp  coordinate_system.h  dbg_print.h  event_emitter_pool.cpp  event_emitter_pool.h  frame_capture.cpp  frame_capture.h  frame_ticker.cpp  frame_ticker.h  model_instance.h  model_source.h  model_source_utils.h  model_template.cpp  model_template.h  model_template_manager.cpp  model_template_manager.h  model_types.h  particle.h  pe1_system.cpp  pe1_system.h  perf_zone.h  render_detail.cpp  render_detail.h  render_model.cpp  render_model.h  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_impl.h  render_service.cpp  render_service.h  render_service_impl.h  render_service_internal.cpp  render_service_internal.h  (+20 more)
src/renderer/corn_effects/cornflakes/internal/cornflakes/: CMakeLists.txt  version.cpp  version.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/asset/: asset_reader.cpp  field_defs.hpp  field_defs_generated.cpp  object_accessors.cpp  object_accessors.hpp  pkb_reader.cpp  text_pkfx_reader.cpp  text_pkfx_reader.hpp  war3_compatibility_validator.cpp  war3_compatibility_validator.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/binding/: binding_internal.hpp  effect_binder.cpp  external_binding.cpp  ir_to_cbem_lowerer.cpp  program_binder.cpp  renderer_binder.cpp  sampler_binder.cpp  sampler_resource.cpp  spatial_layer_resource.cpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/core/: arena.cpp  determinism.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/diagnostics/: diagnostics_facade.hpp  frame_trace.cpp  frame_trace.hpp  issue.cpp  issue_codes.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/events/: event_generator.cpp  event_generator.hpp  event_router.cpp  event_router.hpp  kick_processor.cpp  kick_processor.hpp  payload_builder.cpp  payload_builder.hpp  payload_cache_store.cpp  payload_cache_store.hpp  payload_key.hpp  payload_layout.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/render/: instance_stream.cpp  instance_stream.hpp  pool_extractor.cpp  render_extractor.cpp  render_extractor.hpp  renderer_class_bucket.cpp  renderer_class_bucket.hpp  ribbon_geometry.cpp  ribbon_geometry.hpp  semantic_slot_reader.cpp  shader_perm.cpp  shader_perm.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/sampler/: curve.cpp  curve.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  turbulence.cpp  turbulence.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/scheduler/: serial_worker_pool.cpp  serial_worker_pool.hpp  timeline_semaphore.hpp  worker_pool.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/service/: cornflakes_service.cpp  cornflakes_service.hpp  service_outcome.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/sim/: effect_runtime.cpp  evolve_page_task.cpp  evolve_page_task.hpp  layer_tick_harness.cpp  medium.hpp  particle_page.cpp  particle_page.hpp  particle_pool.cpp  scene_time_window.hpp  simulation_runtime.cpp  simulation_runtime.hpp  spawn_evaluator_driver.cpp  spawn_evaluator_driver.hpp  spawn_processor.cpp  spawn_processor.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/validation/: batch_resource_tracker.cpp  batch_resource_tracker.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/vm/: bytecode_decoder.cpp  bytecode_decoder.hpp  bytecode_trace.cpp  cbem_interpreter.hpp  math_functions.cpp  math_functions.hpp
src/renderer/corn_effects/cornflakes/internal/cornflakes/vm/cbem/: cbem_cbem_ops.cpp  cbem_dispatchers.cpp  cbem_internal.hpp  cbem_interpreter.cpp  cbem_ir_ops.cpp
tools/basic_viewer/: cocoa_window_macos.mm  render_window.cpp  render_window.h  resource.rc  settings_ini.cpp  settings_ini.h  test_main.cpp  viewer_app.cpp  viewer_app.h  viewer_ui.cpp  viewer_ui.h  vulkan_surface_macos.mm  windows_sound_emitter.cpp  windows_sound_emitter.h
tools/common/: cubeb_sound_emitter.cpp  cubeb_sound_emitter.h  imgui_theme.cpp  imgui_theme.h  imgui_viewcube.h
tools/max_plugin/: CMakeLists.txt  WhiteoutDexExtractor.def  WhiteoutDexLauncher.ms  dllmain.cpp  max_plugin_ui.cpp  max_plugin_ui.h  max_scene_adapter.cpp  max_scene_adapter.h  render_window.cpp  render_window.h  resource.h
tools/metal_smoke/: metal_smoke.cpp  triangle.metal
tools/web_viewer/: CMakeLists.txt  exports.txt  hive_app.js  index.html  minimal.html  node_compile_test.mjs  pre.js  serve_nocache.py  sw.js  web_audio.js  web_audio_emitter.cpp  web_audio_emitter.h  wf-asset-pump.js  wf-instance.js  wf-math.js  wf-prefetch.js  wf-viewer.js  wf_actor.cpp  wf_assets.cpp  wf_camera.cpp  wf_settings.cpp  wf_web_api.cpp  wf_web_internal.h  wf_web_minimal.cpp
tools/web_viewer/casc_server/: CMakeLists.txt  main.cpp
(+307 files in other folders)
